# My-ROS2-Ex-Humble

./: .gitignore
bt6/: DON_DEP_DE_GUI.bat  Gazebo Simulation 1.pptx  Gazebo Simulation 3_ Final Project.pptx  Gazebo Simulation.pptx  HUONG_DAN_CAI_CHO_MAY_KHAC.md  HUONG_DAN_SU_DUNG.md  L╞»U  cai_dat_camera_tool.bat  cmd_vel.webm  control_arm.bat  control_arm_easy.bat  control_arm_keyboard.bat  control_robot.bat  debug_cmd_vel.bat  grasp_object.bat  install_moveit.sh  install_ros2.sh  run_simulation.bat  simple_control.py  test_force_move.bat  view_camera.bat
bt6/ros2_ws/src/my_robot_moveit_config/: CMakeLists.txt  package.xml
final project/: Gazebo Simulation 3_ Final Project.pptx  joint_pose_trajectory_plugin.webm
ros2_ws/_disabled/bài tập 5 - using launch file/: launch_file.txt
ros2_ws/_disabled/bài tập 6 - Gazebo/: Gazebo Simulation 1.pptx  Gazebo Simulation 2.pptx  s3_my_robot_frames.gv
ros2_ws/src/bài tập 3 - creating interfaces for msg srv/: create-custom-ROS2-intefaces-msg-srv.txt
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: led_panel.cpp  number_publisher.cpp  (+2 more)
ros2_ws_bt4/src/: using_params.txt
ros2_ws_bt4/src/yaml_params/: led_config.yaml  number_params.yaml
ros2_ws_bt5/src/my_robot_bringup/: CMakeLists.txt
ros2_ws_bt5/src/my_robot_interfaces/: package.xml
ros2_ws_bt6/: .gitignore
ros2_ws_bt6/src/: Gazebo Simulation.pptx
ros2_ws_bt6/src/my_robot_description/: CMakeLists.txt
ros2_ws_bt6/src/my_robot_description/launch/: spawn_robot.launch.py
ros2_ws_bt6/src/my_robot_description/urdf/: my_robot.urdf
(+49 files in other folders)
